# gwydion

./: .gitmodules  CREDITS  Defaults.in  Defaults.win32  INSTALL  Makegen  README  autogen.sh  configure.in  real-autogen.sh  version
common/: Makegen
common/base-file-system/: Makegen
common/collection-extensions/: CollExt.lid  Makegen  library.dylan  vecsearch.dylan
common/collections/: Makegen  bit-set.dylan  bit-vector.dylan  collections.lid  collectors-macros.dylan  collectors.dylan  library.dylan
common/command-processor/: Makegen  cfmakeraw.c  cfmakeraw.h  command-processor-exports.dylan  command-processor.dylan  command-processor.lid  termios.intr
common/common-dylan/: Makegen  bootstrap-common-dylan-exports.dylan  bootstrap-common-dylan.lid  byte-vector.dylan  c-support.dylan  common-dylan-exports.dylan  common-dylan.lid  common-extensions.dylan  extensions.dylan  float.dylan  format.dylan  locators-protocol.dylan  profiling.dylan  streams-protocol.dylan  support.c
common/date/: Makegen
common/file-system/: Makegen  directories.dylan  information.dylan
common/format/: Makegen
common/format-out/: Makegen
common/getopt/: Makegen  defargparser.dylan  getopt-exports.dylan  getopt.dylan
common/io/: Makegen  buffered-format.dylan  condition-format.dylan  format-condition.dylan  format-out.dylan  format.dylan  io-exports.dylan  io.lid  library.dylan  pprint.dylan  print.dylan  redirect-io.dylan  unix-ffi.intr  unix-file-accessor.dylan  unix-io.lid  unix-portability.c  unix-portability.h
common/locators/: Makegen
common/matrix/: Makegen  Matrix.lid  library.dylan  matrix.dylan  matrix.txt
common/network/: Makegen  c-ffi.dylan  unix-ffi.intr  unix-network-library.dylan  unix-network.lid  unix-portability.h
common/print/: Makegen
common/regular-expressions/: Makegen  RegExp.lid  interface.dylan  library.dylan
common/standard-io/: Makegen
common/stream-ext/: Makegen  concatenated-streams.dylan  indenting-streams.dylan  library.dylan
common/stream-extensions/: Makegen  StreamExt.lid  indenting-streams.dylan  library.dylan
common/streams/: Makegen  file-streams.dylan
common/string-ext/: Makegen
common/string-extensions/: Makegen  StringExt.lid
common/system/: .cvsignore  Makegen  date.dylan  library.dylan  operating-system.dylan  unix-date-interface.dylan  unix-ffi.intr  unix-operating-system.dylan  unix-portability.c  unix-portability.h  unix-system.lid  x86-win32-operating-system.dylan  x86-win32-system.lid  xml.dylan
common/table-ext/: Makegen
common/table-extensions/: table-extensions-library.dylan  table-extensions.dylan  table-extensions.lid
common/tests/: Makegen  regressions.dylan
common/threads/: Makegen  bootstrap-library.dylan  bootstrap-threads.lid  library.dylan  threads.dylan
common/time/: Makegen
d2c/: Makegen
d2c/compiler/: Deficiencies.txt  Makegen  platforms.descr
d2c/debugger/: Makegen  debugger.lid  exports.dylan  introspection.dylan
d2c/dig/: Makegen  dig-exports.dylan  dig.dylan  hp-dig.lid  posix-dig.lid  win32-dig.lid
d2c/mogrifier/: Makefile  mogrifier-exports.dylan  mogrifier.dylan  mogrifier.lid
d2c/runtime/: Makegen  runtime.h
debian/: changelog  control  copyright  gwydiondylan.install  rules
demos/: Makegen
demos/cat/: Makegen  cat-exports.dylan  cat.dylan
demos/craps/: Makegen  craps-exports.dylan  craps.dylan
demos/diff/: Makegen  diff-exports.dylan
demos/hello-world/: Makegen
demos/html2txt/: Makegen  html2txt-exports.dylan  html2txt.dylan
demos/library-demo/: Makegen
demos/minesweeper/: Makegen
demos/stream-demo/: Makegen  stream-demo-exports.dylan  stream-demo.dylan
demos/tk-html2txt/: Makegen
doc/: Makefile.in  d2c.1.in  gwydion.7.in  make-dylan-app.1.in  melange.1.in  platforms.descr.4.in
duim/commands/: Makegen
duim/core/: Makegen
duim/dcs/: Makegen
duim/extended-geometry/: Makegen
duim/frames/: Makegen  debug.dylan  library.dylan  module.dylan
duim/gadgets/: Makegen
duim/geometry/: Makegen
duim/graphics/: Makegen
duim/layouts/: Makegen
duim/panes/: Makegen
duim/sheets/: Makegen
duim/utilities/: Makegen
duim/vanilla/: Makegen  vanilla-gadgets.dylan  vanilla-medium.dylan  vanilla-mirror.dylan  vanilla-pixmaps.dylan  vanilla-port.dylan
installers/RPM/: gwydion-dylan-2.4.0.spec
mindy/comp/: Makefile.in  dup.c  lose.c  mindycomp.c  mindycomp.h  sym.h
mindy/compat/: Makefile.in  cygwin.c
mindy/etc/: Makefile.in
mindy/interp/: Makefile.in  brkpt.c  buf.c  char.c  class.c  class.h  coll.c  debug.c  def.c  driver.c  error.c  error.h  ext-init.c  extern.c  extern.h  fd.c  func.c  gc.c  handler.c  init.c  input.c  instance.c  interp.c  lexer.c  list.c  list.h  load.c  lose.c  mindy.c  mindy.h  misc.c  module.c  parser.y  print.c  print.h  str.c  sym.c  type.c  vec.c
mindy/libraries/: Makegen
platform/: Makegen
qa/: Makegen  README  common-Makegen
qa/testworks/: Makegen
qa/testworks-specs/: Makegen  protocol-specs.dylan
tests/: Makegen  coll-ext-test-exports.dylan  coll-ext-test.dylan  coll-ext-test.lid  dylan-test-exports.dylan  dylan-test.dylan  dylan-test.lid  format-out-test-exports.dylan  format-out-test.lid  format-test-exports.dylan  format-test.dylan  format-test.lid  getopt-test-exports.dylan  itime-test.dylan  matrix-test-exports.dylan  matrix-test.dylan  matrix-test.lid  print-test-exports.dylan  print-test.dylan  print-test.lid  random-test-exports.dylan  random-test.dylan  random-test.lid  regexp-test-exports.dylan  regexp-test.dylan  regexp-test.lid  stream-test-exports.dylan  stream-test.dylan  table-ext-test-exports.dylan  table-ext-test.dylan  table-ext-test.lid  threaded-io-test.dylan  time-test-exports.dylan
tests/regressions/: PR#7211.dylan  PR#7231.dylan
tools/: Makegen
tools/lisp2dylan/: Makegen  library.dylan  lisp2dylan.dylan
tools/make-exports/: Makegen  library.dylan  make-exports.dylan
tools/melange/: Makegen  c-decl-state.dylan  c-decl-write.dylan  c-decl.dylan  c-exports.dylan  c-lexer-cpp.dylan  c-lexer.dylan  c-parse.input  cygnus-c-decl.lid  cygnus-portability.dylan  cygwin-c-decl.lid  (+23 more)
(+415 files in other folders)
